[project]
name = "rag-agent-system"
version = "0.1.0"
description = "Internal Agent Builder assignment: production-ready RAG agent"
requires-python = ">=3.13"
dependencies = [
  "fastapi>=0.116.0",
  "uvicorn>=0.35.0",
  "pydantic>=2.11.0",
  "openai>=1.99.0",
  "numpy>=2.3.0",
  "python-dotenv>=1.0.0",
]

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.uv]
package = false

[dependency-groups]
dev = [
  "ruff>=0.9.0",
  "pyright>=1.1.390",
]
